tests/miz/fail/types/fail_type_elaboration_local_structure_forward_reference_gap_001.miz
reserve s for LaterStruct;

definition
  struct LaterStruct where
    field carrier -> set;
  end;
end;
